just needed to take out App class text-align:center to fix for hoverCard

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
-.App {
+/* .App {
   text-align: center;
-}
+} */
 
 .App-logo {
   height: 40vmin;
@@ -10,7 +10,6 @@
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 10s linear;
-    /* animation: App-logo-spin 5s linear; */
   }
 }
 
@@ -36,4 +35,6 @@
   to {
     transform: rotate(360deg);
   }
-}
+} 
+
+
