--- a/src/Pages/CardHoverFX/CardHover.module.css
+++ b/src/Pages/CardHoverFX/CardHover.module.css
@@ -1,15 +1,17 @@
 .wrapper {
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  /* box-shadow: 10px 10px 10px 10px; */
 }
 
 .container {
+  position: relative;
+  width: 1000px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.cardHoverImg {
-  min-height: 300px;
-  width: 300px;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  margin: 20px;
+  /* box-shadow: 10px 10px 10px 10px; */
 }
